# hft-crypto-trading

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
crates/hft/: Cargo.toml
crates/hft-backtesting/: Cargo.toml
crates/hft-backtesting/src/: lib.rs  runner.rs
crates/hft-core/: Cargo.toml
crates/hft-core/src/: error.rs  events.rs  lib.rs  types.rs
crates/hft-data-recorder/: Cargo.toml
crates/hft-data-recorder/src/: lib.rs  record.rs  replay.rs
crates/hft-exchange/: Cargo.toml
crates/hft-exchange/src/: binance.rs  connector.rs  lib.rs  simulator.rs
crates/hft-execution/: Cargo.toml
crates/hft-execution/src/: engine.rs  lib.rs
crates/hft-experiment-runner/: Cargo.toml
crates/hft-experiment-runner/src/: lib.rs  record.rs  runner.rs
crates/hft-feed-handler/: Cargo.toml
crates/hft-feed-handler/src/: handler.rs  lib.rs
crates/hft-logging/: Cargo.toml
crates/hft-logging/src/: lib.rs  persist.rs
crates/hft-metrics/: Cargo.toml
crates/hft-metrics/src/: lib.rs  metrics.rs
crates/hft-optimizer/: Cargo.toml
crates/hft-optimizer/src/: grid.rs  lib.rs  params.rs  random.rs  runner.rs
crates/hft-order-book/: Cargo.toml
crates/hft-order-book/src/: book.rs  lib.rs
crates/hft-performance-metrics/: Cargo.toml
crates/hft-performance-metrics/src/: lib.rs  metrics.rs  trade.rs
crates/hft-risk/: Cargo.toml
crates/hft-risk/src/: lib.rs  manager.rs
crates/hft-strategy/: Cargo.toml
crates/hft-strategy/src/: engine.rs  lib.rs  registry.rs
crates/hft-strategy/src/strategies/: imbalance.rs  market_maker.rs  mod.rs  stub.rs
crates/hft-ui/: Cargo.toml
crates/hft-ui/src/: app.rs  lib.rs  run.rs
crates/hft-ui/src/widgets/: cancels.rs  logs.rs  mod.rs  order_book.rs  pnl_latency.rs  positions.rs  price_feed.rs  strategy_comparison.rs  trades.rs
crates/hft/examples/: test_simulator_connection.rs
crates/hft/src/: main.rs  position_tracker.rs
docs/: PROJECT_SUMMARY_FOR_NEW_ALGO.md  STRATEGY_RESEARCH_ARCHITECTURE.md  STRATEGY_RESEARCH_README.md
