[package]
name = "hft-data-recorder"
version = "0.1.0"
edition = "2021"
description = "Record and replay market data (FeedEvent) for reproducible backtests"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
hft-core = { path = "../hft-core" }
hft-feed-handler = { path = "../hft-feed-handler" }
hft-backtesting = { path = "../hft-backtesting" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
