[package]
name = "hft-exchange"
version = "0.1.0"
edition = "2021"
description = "Exchange API connectors (Binance and others)"

[dependencies]
hft-core = { path = "../hft-core" }
tokio = { version = "1", features = ["sync", "net", "time", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
rust_decimal = { version = "1.33", features = ["serde"] }
tracing = "0.1"
