[package]
name = "hft-feed-handler"
version = "0.1.0"
edition = "2021"
description = "Market data feed handler: ingest and normalize exchange streams"

[dependencies]
hft-core = { path = "../hft-core" }
hft-order-book = { path = "../hft-order-book" }
hft-exchange = { path = "../hft-exchange" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
