[package]
name = "hft-ui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for the HFT trading system"

[dependencies]
hft-core = { path = "../hft-core" }
hft-execution = { path = "../hft-execution" }
hft-feed-handler = { path = "../hft-feed-handler" }
hft-metrics = { path = "../hft-metrics" }
hft-order-book = { path = "../hft-order-book" }
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }
